# rprdcbl

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
doc/: manual.adoc
src/R/: .Rbuildignore  DESCRIPTION  Makefile  NAMESPACE
src/R/R/: collectors.R  configuration.R  printers.R  processing.R  public.R  testers.R  util.R
src/R/tests/: testthat.R
src/R/tests/testthat/: test_boundary_failure.R  test_general_use.R  test_replication_failure.R  test_units.R
src/py/: .style.yapf  Makefile  README.md  setup.cfg  tox.ini
src/py/rprdcbl/: __init__.py  collectors.py  configuration.py  printers.py  processing.py  testers.py  util.py
src/py/tests/: boundary_failure_tests.py  general_use_tests.py  replication_failure_tests.py  tutils.py  unit_tests.py
