[metadata]
author = J. Tobias Hahn
author_email = t@varkappa.dev
name = rprdcbl
version = 0.0.1
description = Reproducible research report package.
url = https://github.com/varkappadev/rprdcbl
long_description = file:README.md
long_description_content_type = text/markdown
keywords = research, reproducibility
license = Apache License Version 2.0
license_files = LICENSE
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Intended Audience :: Science/Research

[options]
zip_safe = True
include_package_data = True
packages = find:
test_suite = tests
python_requires = >=3.7

[options.package_data]

[options.data_files]
